--- a/Statistics&Shuffling.ipynb
+++ b/Statistics&Shuffling.ipynb
@@ -15,10 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analysis.statistics import StatTests\n",
     "from analysis.shuffling import ShuffleAnalysis\n",
     "from analysis.widgets import StatisticWidgets as stw\n",
     "from analysis.widgets import ShufflingWidgets as shw\n",
+    "from analysis.dim_reduction import Data\n",
+    "from analysis.multiple_shuffling import MultipleShuffler\n",
+    "from analysis.distance import DistanceAnalysis\n",
     "from tqdm.notebook import tqdm\n",
     "import matplotlib as mpl\n",
     "\n",
@@ -40,109 +42,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# path to the folder with the processed data\n",
+    "path_to_data = 'demo_movies'\n",
+    "\n",
+    "# sessions params\n",
+    "# key - unique id\n",
+    "# path - path to session data\n",
+    "# mouse - mouse id\n",
+    "# condition (1/2 etc)\n",
+    "# fps - frames per second\n",
     "dates = {\n",
     "    'mouseold1': {'path': 'mouseold/1',\n",
-    "                    'fps': 20},\n",
+    "                  'mouse': '1',\n",
+    "                  'condition': '1',\n",
+    "                  'fps': 20},\n",
     "    'mouseold2': {'path': 'mouseold/2',\n",
-    "                    'fps': 20},\n",
+    "                  'mouse': '1',\n",
+    "                  'condition': '1',\n",
+    "                  'fps': 20},\n",
     "    'mouseold3': {'path': 'mouseold/3',\n",
-    "                    'fps': 20},\n",
-    "}\n",
+    "                  'mouse': '1',\n",
+    "                  'condition': '1',\n",
+    "                  'fps': 20},\n",
     "\n",
-    "path_to_data = 'demo_movies'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a7e2388",
-   "metadata": {},
-   "source": [
-    "# Statistics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54c45eed",
-   "metadata": {},
-   "source": [
-    "## Init"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2940e6d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "st = StatTests(path_to_data, dates)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4b286ab",
-   "metadata": {},
-   "source": [
-    "## Correlation & Statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc0debf0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stw.show_correlation_distribution(st)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebb6ec29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st.show_stats_distribution()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ac37d65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stw.get_test(st);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a87b3da0",
-   "metadata": {},
-   "source": [
-    "## Correlation advanced"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ba9ae3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stw.show_distribution_of_connectivity(st)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4014892",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stw.show_network_degree(st)"
+    "    'mouseX': {'path': 'mouse3/right_after',\n",
+    "               'mouse': '1',\n",
+    "               'condition': '2',\n",
+    "               'fps': 15},\n",
+    "}"
    ]
   },
   {
@@ -204,9 +131,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a7e2388",
+   "metadata": {},
+   "source": [
+    "# Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4e87b9",
+   "metadata": {},
+   "source": [
+    "## Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "821e13bc",
+   "id": "5187c51f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# data loading\n",
+    "data_class = Data(path_to_data, dates, verbose=True)\n",
+    "data_class.get_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7608ef51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stw.show_features(data_class)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "534a04c4",
+   "metadata": {},
+   "source": [
+    "## Shuffling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d6d4122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_of_shuffles = 2\n",
+    "\n",
+    "shuffle_fractions = [.5, 1.]\n",
+    "\n",
+    "ms = MultipleShuffler(\n",
+    "    path_to_data,\n",
+    "    dates,\n",
+    "    num_of_shuffles=num_of_shuffles,\n",
+    "    shuffle_fractions=shuffle_fractions\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36be5a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stw.show_shuffling(ms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f817b2d3",
+   "metadata": {},
+   "source": [
+    "## Distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30206e9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates_da = [\n",
+    "    '1',\n",
+    "    '2',\n",
+    "    '3',\n",
+    "]\n",
+    "\n",
+    "path_to_data_da = 'demo_movies/mouseold'\n",
+    "\n",
+    "fps_da = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe165452",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da = DistanceAnalysis(path_to_data_da, dates_da, fps_da)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a123fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stw.show_distance(da)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d169c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "450713c8",
    "metadata": {},
    "outputs": [],
    "source": []
